--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "build:cjs": "tsc --module commonjs --outDir lib/cjs"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.2",
+    "buffer": "^6.0.3",
+    "idna-uts46-hx": "^4.1.2"
   },
   "devDependencies": {
     "prettier": "3.0.3",
