--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "build:cjs": "tsc --module commonjs --outDir lib/cjs"
   },
   "dependencies": {
+    "@adraffy/ens-normalize": "^1.10.0",
     "@noble/hashes": "^1.3.2",
-    "buffer": "^6.0.3",
-    "idna-uts46-hx": "^4.1.2"
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "prettier": "3.0.3",
