--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./lib/esm",
     "rootDir": "./src",
     "strict": true,
+    "lib": ["ES6", "DOM"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
