--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "LICENSE"
   ],
   "scripts": {
+    "prettier": "prettier --write 'src/**/*.{js,ts}'",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register --timeout 20000 'tests/**/*.ts'",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs"
@@ -29,7 +31,12 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
     "prettier": "3.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
